# RedundancyAI

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  DIAGRAMS_GUIDE.md  LAUNCH_CHECKLIST.md  README.md  SECURITY_AUDIT.md  SECURITY_REVIEW_DRAWIO_SKILL.md  app.py  architecture-diagram.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
data/: confidence_calibration.json
data/raw/: SOURCES.md  download_results.json
diagrams/: 1-system-architecture.drawio  2-data-flow.drawio  3-security-layers.drawio  4-component-dependencies.drawio  5-deployment-architecture.drawio  README.md
scripts/: build_index.py  download_sources.py  evaluate_retrieval.py  test_phase5.py  tune_confidence.py  tune_confidence_simple.py
src/: __init__.py  config.py  embed_store.py  ingest.py  injection_detector.py  logger.py  output_processor.py  prompts.py  rag_chain.py
tests/: __init__.py  test_e2e.py  test_injection_detector.py  test_output_processor.py  test_rag_chain.py
tests/fixtures/: golden_questions.json
